Re add prompt class (prompt-box), remove gap between <ul>, Fix prompt div (center it and give it a width, make prompt-container a column box and give it gap with button)

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     font-family: Roboto, sans-serif;
     margin: 0;
-    align-items: center;
+    align-content: ;
 }
 
 .hero {
@@ -31,10 +31,11 @@ body {
     font-weight: bold;
 }
 
+    /* take off the gap */
+
 ul {
     display: flex;
     list-style: none;
-    gap: 20px;
     margin: 0;
     padding: 0;
 }
@@ -47,7 +48,7 @@ a {
 .main {
     display: flex;
     justify-content: center;
-    gap: 95px;
+    gap: 80px;
 }
 
 .main-title {
@@ -144,18 +145,31 @@ button {
     display: flex;
     align-self: flex-end;
     font-weight: bold;
-    margin-right: 250px;
+    margin-right: 350px;
+}
+
+/* Fix prompt*/
+
+.prompt-box {
+    display: flex;
+    justify-content: center;
 }
 
 .prompt {
     display: flex;
     background-color: #3882f6;
     border-radius: 8px;
-    width: 65%;
     color: white;
     padding: 50px;
     justify-content: space-around;
     margin-bottom: 100px;
+    align-items: center;
+    width: 700px;
+}
+
+.prompt-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .prompt-header {
@@ -169,7 +183,6 @@ button {
 }
 
 .footer {
-    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
